WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287288
command and commandfor attributes don't prevent missing type buttons from submitting forms
https://bugs.webkit.org/show_bug.cgi?id=287288
Summary
command and commandfor attributes don't prevent missing type buttons from sub...
Luke Warlow
Reported
2025-02-07 13:47:55 PST
`<button command="">` or `<button commandfor="">` shouldn't submit forms but they do in WebKit. This patch tracks correcting that, and also implementing the updated type reflection behaviour.
Attachments
Add attachment
proposed patch, testcase, etc.
Luke Warlow
Comment 1
2025-02-07 13:56:34 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40245
Radar WebKit Bug Importer
Comment 2
2025-02-14 13:48:33 PST
<
rdar://problem/144884701
>
EWS
Comment 3
2025-03-12 05:23:43 PDT
Committed
292010@main
(b4d27c3a21da): <
https://commits.webkit.org/292010@main
> Reviewed commits have been landed. Closing PR #40245 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug