Update button activation and reflection behavior with command or commandfor https://bugs.webkit.org/show_bug.cgi?id=287288

Reviewed by Anne van Kesteren.

This patch correctly updates the button activation steps to match the spec,
missing and invalid type buttons no longer submit forms when they have a command or commandfor
attribute. They also correctly don't act as command buttons.

This patch also updates form associated reset buttons and inputs to not trigger
popovertarget or commandfor behavior.

The button elements type reflection also correctly reflects as button
when it has a missing or invalid type attribute and has command or commandfor.

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/popovers/button-type-popovertarget-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/popovers/input-type-popovertarget-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/the-button-element/command-and-commandfor/button-type-behavior-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/the-button-element/command-and-commandfor/button-type-reflection-expected.txt:
* LayoutTests/platform/gtk/imported/w3c/web-platform-tests/html/semantics/the-button-element/command-and-commandfor/button-type-behavior-expected.txt:
* LayoutTests/platform/gtk/imported/w3c/web-platform-tests/html/semantics/the-button-element/command-and-commandfor/button-type-reflection-expected.txt:
* Source/WebCore/html/HTMLButtonElement.cpp:
(WebCore::HTMLButtonElement::attributeChanged):
(WebCore::HTMLButtonElement::defaultEventHandler):
(WebCore::HTMLButtonElement::computeType):
* Source/WebCore/html/HTMLButtonElement.h:
* Source/WebCore/html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::defaultEventHandler):

Canonical link: https://commits.webkit.org/292010@main